[package]
name = "woonsocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
bufstream = "0.1"
clap = { version = "4.5", features = ["derive"] }
io-uring = { version = "0.7"}
libc = { version = "0.2"}
nix = { version = "0.29", features = ["net", "socket"]}
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
minstant = "0.1.7"
env_logger = "0.11.6"
log = "0.4.25"
csv = "1"

[profile.release]
debug = true

[[bin]]
name="server"
path="src/bin/server.rs"

[[bin]]
name="client"
path="src/bin/client.rs"
